--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -48,7 +48,7 @@
                         
                     </div>
                     
-                    <a href="#" target="_blank">My Resume</a>
+                    <a href="https://drive.google.com/drive/u/1/computers" target="_blank">My Resume</a>
                 </div>
                 <ul>
                     <a href="https://api.whatsapp.com/send?phone=+919621938984"><i class='bx bxs-contact bx-md'></i></a>
@@ -86,7 +86,7 @@
                     Thyroid Prediction System.I have worked hard in my education and now I am ready to apply my
                     knowledge into practice. That's all about.
                     </p>
-                    <a href="#" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/drive/u/1/computers" target="_blank">Download CV</a>
                 </div>
             </div>
         </div>
